--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="odds">Number 1 - I'm a class!</p>
     <div id="element2">Number 2 - I'm one ID.</div>
     <p class="odds font24">Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div id="element4">Number 4 - I'm another ID.</div>
     <p class="odds">Number 5 - I'm a class!</p>
   </body>
 </html>
